--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tanstack/react-query": "^5.70.0",
     "@tanstack/react-query-devtools": "^5.70.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "6",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
